[package]
name = "gltf_tool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
assets = "0.3.0"
bevy = "0.11.0"
bevy-inspector-egui = "0.19.0"
# I suppose bevy_egui makes it better compatible with bevy-inspector-egui? Maybe not.
bevy_panorbit_camera = { version = "0.7.0", features = ["bevy_egui"] }
